--- a/grilnitca-frontend/tsconfig.json
+++ b/grilnitca-frontend/tsconfig.json
@@ -2,12 +2,18 @@
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
     "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "target": "es2020",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true,
-    "skipLibCheck": true,
     "plugins": [
       {
         "name": "next"
@@ -15,20 +21,14 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    },
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "target": "ES2023",
-    "strict": true,
-    "esModuleInterop": true
+    }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "@types/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
