--- a/grilnitca-frontend/package.json
+++ b/grilnitca-frontend/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "pg": "^8.16.3",
+    "qs": "^6.14.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-use": "^17.6.0",
@@ -40,6 +41,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.27",
     "@types/pg": "^8.16.0",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "bcrypt": "^6.0.0",
